Fixed spacing about IE7 title

--- a/public_html/templates/ccistudios/css/layout.css
+++ b/public_html/templates/ccistudios/css/layout.css
@@ -69,7 +69,7 @@ body {
 #footer a { color: white; }
 
 #title {
-	margin-top: 10px;
+	padding-top: 10px;
 
 	text-align: center;
 	line-height: 1.4em;
